# kitchenai-community

./: .gitignore  README.md  cookbooks.json  deprecated.json  justfile  pyproject.toml
src/kitchenai_community/llama_index_chat/: app.py
src/kitchenai_community/llama_index_chat_engine_best_mode/: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  kitchenai.yml  pyproject.toml
src/kitchenai_community/llama_index_chat_engine_best_mode/kitchenai_llama_index_chat_engine_best_mode/: kitchen.py
src/kitchenai_community/llama_index_chat_engine_best_mode/scripts/: client-generator.sh
src/kitchenai_community/llama_index_starter/: README.md  app.py  notebook.ipynb  requirements.txt
src/kitchenai_community/llama_index_toolhouse/: app.py  requirements.txt
src/kitchenai_community/llama_index_toolhouse_cloudflare/: README.md  app.py  metadata.ipynb  no_metadata.ipynb  requirements.txt
src/kitchenai_community/llama_index_toolhouse_cloudflare/chroma_db/: chroma.sqlite3
